--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "lint-fix": "eslint --fix --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "fix": "eslint --fix --ext .js,.vue src test/unit test/e2e/specs",
+    "build": "node build/build.js",
+    "analyz": "cross-env NODE_ENV=production npm_config_report=true npm run build"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^0.10.0",
@@ -28,6 +29,7 @@
     "mongoose": "^5.2.6",
     "multer": "^1.3.1",
     "nprogress": "^0.2.0",
+    "process-nextick-args": "^2.0.0",
     "save-dev": "^2.0.0",
     "svg.js": "^2.6.5",
     "vue": "^2.5.2",
@@ -97,7 +99,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
