--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mapbox/mapbox-gl-language": "^0.10.0",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "compression": "^1.7.4",
     "element-ui": "^2.4.5",
     "eslint-plugin-html": "^5.0.0",
     "expresss": "0.0.0",
@@ -30,6 +31,7 @@
     "multer": "^1.3.1",
     "nprogress": "^0.2.0",
     "process-nextick-args": "^2.0.0",
+    "require-all": "^3.0.0",
     "save-dev": "^2.0.0",
     "svg.js": "^2.6.5",
     "vue": "^2.5.2",
@@ -58,6 +60,7 @@
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
@@ -98,6 +101,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.1.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^2.9.1",
